fix the damn tiling with flexbox, i love you flexbox

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </div>
     </div>
     <div class="container">
-        <ul id="todolist">
+        <div id="todolist" class="row">
 
-        </ul>
+        </div>
         <!-- TEST CARD -->
-        <!-- <div class="col-4">
+        <!-- <div class="col-12 col-sm-6 col-md-4">
             <div class="card"
                 <div class="card-body">
                     <h5 class="card-text">Placeholder</h5>
