--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container pt-2">
         <div id="todolist" class="row">
 
         </div>
